force-app/main/default/objects/Gear_Order_Sibling_Demographic__c/Gear_Order_Sibling_Demographic__c.object-meta.xml
<CustomObject>
    <description>Sibling of the child described in a Gear Demographic</description>
    <label>Gear Order Sibling Demographic</label>
    <nameField>
        <displayFormat>GOSD-{0000000000}</displayFormat>
        <label>Sibling Demographic Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gear Order Sibling Demographics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>