force-app/main/default/objects/Gear_Order_Sibling_Demographic__c/fields/Gear_Order__c.field-meta.xml
<CustomField>
    <fullName>Gear_Order__c</fullName>
    <formula>Gear_Order_Demographic__r.Gear_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gear Order</label>
    <type>Text</type>
</CustomField>