force-app/main/default/objects/Gear_Order_Sibling_Demographic__c/fields/Gear_Order_Demographic__c.field-meta.xml
<CustomField>
    <fullName>Gear_Order_Demographic__c</fullName>
    <label>Gear Order Demographic</label>
    <referenceTo>Gear_Order_Demographic__c</referenceTo>
    <relationshipLabel>Gear Order Sibling Demographics</relationshipLabel>
    <relationshipName>Gear_Order_Sibling_Demographics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>