force-app/main/default/objects/Gear_Order_Sibling_Demographic__c/fields/Sibling_Age__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Age__c</fullName>
    <label>Sibling Age</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Child_Ages</valueSetName>
    </valueSet>
</CustomField>