force-app/main/default/objects/Gear_Order_Sibling_Demographic__c/fields/Sibling_Gender__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Gender__c</fullName>
    <label>Sibling Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender_Demographic</valueSetName>
    </valueSet>
</CustomField>